# AgentFlow

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyre_configuration  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_CN.md  SKILL.md  embed.go  go.mod  go.sum  install.bat  install.ps1  install.sh  local-install.sh  package.json  pyinstaller_entry.py  pyproject.toml  pyrightconfig.json
.agentflow/kb/: CHANGELOG.md  INDEX.md  context.md
.agentflow/sessions/: 20260312_162836.md  20260312_165257.md  20260312_165551.md  20260312_171427.md  20260312_174036.md  20260312_174643.md  20260312_174943.md  20260312_200232.md
.github/workflows/: ci.yml  release.yml
agentflow/: _AGENTS.md  _SKILL.md  __init__.py  _constants.py  cli.py  installer.py  interactive.py  updater.py  version_check.py
agentflow/agents/: architect.toml  codex_agents.toml  reviewer.toml
agentflow/core/: attention.md  common.md  hooks.md  hooks_codex.md  hooks_other.md  module_loading.md  subagent.md  subagent_gemini.md  subagent_opencode.md  subagent_other.md
agentflow/functions/: auto.md  conventions.md  exec.md  graph.md  help.md  init.md  memory.md  plan.md  rlm.md  scan.md  status.md
agentflow/hooks/: claude_hooks.json  codex_hooks.toml
agentflow/project_rules/: ide_vscode_copilot_agentflow.md
agentflow/rules/: cache.md  scaling.md  state.md  tools.md
agentflow/scripts/: __init__.py  arch_scanner.py  cache_manager.py  config_helpers.py  convention_scanner.py  dashboard_generator.py  graph_builder.py  kb_sync.py  session_manager.py  template_init.py
agentflow/services/: attention.md  knowledge.md  memory.md  package.md  support.md
agentflow/stages/: design.md  develop.md
agentflow/templates/: changelog_template.md  fullstack_project.md  kb_templates.md  plan_templates.md  python_project.md  session_summary_template.md
cmd/agentflow/: main.go
docs/: ai-tools-skill-mcp-guide.md  codex_claude_config_research.md  codex_config_fix_plan.md
docs/troubleshooting/: windows.md
internal/app/: app.go  app_test.go  automation.go  automation_test.go  commands.go  ecosystem.go  interactive.go  interactive_test.go  mcp.go  panels_bootstrap.go  panels_config.go  panels_config_test.go  project_rules_panels.go  rules.go  skill.go  workspace.go
internal/buildinfo/: buildinfo.go  buildinfo_test.go
internal/config/: constants.go  content.go  files.go  files_test.go  targets.go
internal/debuglog/: debuglog.go
internal/i18n/: locale.go  locale_test.go
scripts/: tavily-mcp-server.js
tests/: conftest.py  test_arch_scanner.py  test_cache_manager.py  test_cli.py  test_cli_commands.py  test_config_helpers.py  test_constants_full.py  test_convention_scanner.py  test_dashboard_generator.py  test_graph_builder.py  test_installer.py  test_installer_advanced.py  test_interactive.py  test_kb_sync.py  test_profile.py  test_session_manager.py  test_static_configs.py  test_template_init.py  test_updater.py  test_version_check.py
(+150 files in other folders)
