[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentflow"
version = "1.0.0"
description = "Multi-CLI agent workflow system — keeps going until tasks are implemented and verified."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgentFlow Contributors" },
]
keywords = ["ai", "agent", "workflow", "claude-code", "codex", "coding-assistant", "prompt-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
agentflow = "agentflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.knot.environment]
python-version = "3.12"

[tool.knot.src]
root = "."
